Wrong translation for phone number field

--- a/i18n/no-nb.toml
+++ b/i18n/no-nb.toml
@@ -23,7 +23,7 @@ other = "forrige"
 other = "Ditt navn"
 
 [phoneNumber]
-other = "Telefone number"
+other = "Telefon nummer"
 
 [emailAddress]
 other = "E-postadresse"
